# Aprendizado_estatistico

./: README.md
Teacher_Forcing_in_RNNs/: main.py  model_weights.pth  pyproject.toml  teacher_forcing_in_rnns.py
knn/: classify_income.py  model.ipynb
